change files according mentor's notes